    running Oracle Berkeley DB version 6.2 or newer.

  * Support HEAP access method if you are linking against Oracle Berkeley DB
    5.3 or newer.

    - Implement, test and document "DB.get_heapsize()", "DB.set_heapsize()",
      "DB.get_heap_regionsize()" and "DB.set_heap_regionsize()".

    - Export exception "DBHeapFull" (from error "DB_HEAP_FULL").

18.1.1 - 2020-12-01:
  * If you try to install this library in an unsupported Python
    environment, instruct the user about how to install legacy "bsddb3"
    library.

  * Expose DBSite object in the C API. Increase C API version.

  * WARNING - BREAKING CHANGE: Ancient release 4.2.8 added weakref support to
    all bsddb.db objects, but from now on this feature requires at least Python
    3.9 because I have migrated from static types to heap types. Let me know if
    this is a problem for you. I could, for example, keep the old types in
    Python < 3.9, if needed.

    Details:

    Py_tp_dictoffset / Py_tp_finalize are unsettable in stable API
    https://bugs.python.org/issue38140

    bpo-38140: Make dict and weakref offsets opaque for C heap types (#16076)
    https://github.com/python/cpython/commit/3368f3c6ae4140a0883e19350e672fd09c9db616

  * "_iter_mixin" and "_DBWithCursor" classes have been rewritten to avoid the
    need of getting a weak reference to "DBCursor" objects, since now it is
    problematic if Python < 3.9.

  * Wai Keen Woon and Nik Adam sent some weeks ago a patch to solve a problem
    with "DB.verify()" always succeeding. Refactoring in that area in 18.1.0
    made that patch unneeded, but I added the test case provided to the test
    suite.

  * "DBEnv.cdsgroup_begin()" implemented.

  * "DBTxn.set_priority()" and "DBTxn.get_priority()" implemented. You need to
    link this library against Oracle Berkeley DB >= 5.3.

  * "DBEnv.set_lk_max()" was deprecated and deleted long time ago. Time
    to delete it from documentation too.
